[SNAPSHOT]
 * fix error parsing for Fitbit (thanks to https://github.com/danmana)
 * optimize debug log performance impact on prod in OAuth1 and fix
   NoClassDefFoundError on Android device with SDK 18 and lower (thanks to https://github.com/arcao)

[5.4.0]
 * fix missing support for scope for refresh_token grant_type (thanks to https://github.com/tlxtellef)
 * add email field to VKOAuth2AccessToken (thanks to https://github.com/grouzen)
 * add new API - Automatic (https://www.automatic.com/) (thanks to https://github.com/ramsrib)
 * add new API - Fitbit (https://www.fitbit.com/) (thanks to https://github.com/JustinLawler and https://github.com/alexthered)
 * deprecate OAuthConfig
 * OAuth1.0: send "oob" instead of null callback while requesting RequestToken (thanks to https://github.com/Rafaelsk)

[5.3.0]
 * fix Salesforce API (thanks to https://github.com/jhorowitz-firedrum)
 * remove 'final' from methods in OAuth[10a|20]Service to allow mocking it
 * fix Pinterest API (thanks to https://github.com/sschwieb)
 * add Yahoo2 API (thanks to https://github.com/javatestcase)
 * fix Tumblr urls, convert to https (thanks to https://github.com/highthunder)
 * fix: allow spaces in scope param in OAuth2Accesstoken response
 * add required param version to VK ВКонтакте (http://vk.com/) urls

[5.2.0-java7again]
 * allow 'null' as callback. It's an optional parameter. Remove "oob" as default (thanks to https://github.com/massongit)
 * java7 compatible again!

[5.1.0]
 * drop optional dependency on Apache commons-codec
 * add API - Dataporten (https://docs.dataporten.no/) (thanks to https://github.com/xibriz)
 * add API - Microsoft Azure Active Directory (Azure AD) (thanks to https://github.com/kaushalmall)
 * fix LinkedInApi20 (thanks to https://github.com/jhorowitz-firedrum)

[5.0.0]
 * drop Java 7 backward compatibility support, become Java 8 only
 * add JSON token extractor for OAuth 1.0a (thanks to https://github.com/evstropovv)