@@ -2,6 +2,7 @@
  * fix error parsing for Fitbit (thanks to https://github.com/danmana)
  * optimize debug log performance impact on prod in OAuth1 and fix
    NoClassDefFoundError on Android device with SDK 18 and lower (thanks to https://github.com/arcao)
+ * add new API - MediaWiki (https://www.mediawiki.org/) (thanks to https://github.com/lucaswerkmeister)
 
 [5.4.0]
  * fix missing support for scope for refresh_token grant_type (thanks to https://github.com/tlxtellef)
